ig/ch-elm/1.11.0/CodeSystem-ch-elm-foph-code-reserve.md
# CH ELM FOPH Code Reserve - CH ELM (R4) v1.12.0

* [**Table of Contents**](toc.md)
* [**Artifacts Summary**](artifacts.md)
* **CH ELM FOPH Code Reserve**

## CodeSystem: CH ELM FOPH Code Reserve 

| | |
| :--- | :--- |
| *Official URL*:urn:oid:2.16.756.5.30.1.129.1.5.1 | *Version*:1.12.0 |
| Active as of 2025-10-21 | *Computable Name*:ChElmFophCodeReserve |
| **Copyright/Legal**: CC0-1.0 | |

 
This code system contains proprietary placeholder codes for use in situations of emerging pathogens for which no other code exist. 

 This Code system is referenced in the content logical definition of the following value sets: 

* This CodeSystem is not used here; it may be used elsewhere (e.g. specifications and/or implementations that use this content)

This case-insensitive code system `urn:oid:2.16.756.5.30.1.129.1.5.1` provides **a fragment** that includes following codes:



## Resource Content

```json
{
  "resourceType" : "CodeSystem",
  "id" : "ch-elm-foph-code-reserve",
  "url" : "urn:oid:2.16.756.5.30.1.129.1.5.1",
  "version" : "1.12.0",
  "name" : "ChElmFophCodeReserve",
  "title" : "CH ELM FOPH Code Reserve",
  "status" : "active",
  "experimental" : false,
  "date" : "2025-10-21T11:37:53+00:00",
  "publisher" : "Federal Office of Public Health FOPH",
  "contact" : [
    {
      "name" : "Federal Office of Public Health FOPH",
      "telecom" : [
        {
          "system" : "url",
          "value" : "https://www.bag.admin.ch/bag/en/home/das-bag/kontakt-standort.html"
        }
      ]
    }
  ],
  "description" : "This code system contains proprietary placeholder codes for use in situations of emerging pathogens for which no other code exist.",
  "jurisdiction" : [
    {
      "coding" : [
        {
          "system" : "urn:iso:std:iso:3166",
          "code" : "CH"
        }
      ]
    }
  ],
  "copyright" : "CC0-1.0",
  "caseSensitive" : false,
  "content" : "fragment"
}

```
