ig/ch-elm/1.13.0/CodeSystem-ch-elm-foph-code-reserve.md
# CH ELM FOPH Code Reserve - CH ELM (R4) v1.13.0

* [**Table of Contents**](toc.md)
* [**Artifacts Summary**](artifacts.md)
* **CH ELM FOPH Code Reserve**

## CodeSystem: CH ELM FOPH Code Reserve 

| | |
| :--- | :--- |
| *Official URL*:urn:oid:2.16.756.5.30.1.129.1.5.1 | *Version*:1.13.0 |
| Active as of 2025-11-25 | *Computable Name*:ChElmFophCodeReserve |
| **Copyright/Legal**: CC0-1.0 | |

 
This code system contains proprietary placeholder codes for use in situations of emerging pathogens for which no other code exist. 

 This Code system is referenced in the content logical definition of the following value sets: 

* [ChElmResultsLaboratoryObservation](ValueSet-ch-elm-results-laboratory-observation.md)
* [ChElmResultsLaboratoryObservationComplete](ValueSet-ch-elm-results-laboratory-observation-complete.md)

This case-insensitive code system `urn:oid:2.16.756.5.30.1.129.1.5.1` provides **a fragment** that includes following codes:



## Resource Content

```json
{
  "resourceType" : "CodeSystem",
  "id" : "ch-elm-foph-code-reserve",
  "url" : "urn:oid:2.16.756.5.30.1.129.1.5.1",
  "version" : "1.13.0",
  "name" : "ChElmFophCodeReserve",
  "title" : "CH ELM FOPH Code Reserve",
  "status" : "active",
  "experimental" : false,
  "date" : "2025-11-25T09:47:06+00:00",
  "publisher" : "Federal Office of Public Health FOPH",
  "contact" : [
    {
      "name" : "Federal Office of Public Health FOPH",
      "telecom" : [
        {
          "system" : "url",
          "value" : "https://www.bag.admin.ch/bag/en/home/das-bag/kontakt-standort.html"
        }
      ]
    }
  ],
  "description" : "This code system contains proprietary placeholder codes for use in situations of emerging pathogens for which no other code exist.",
  "jurisdiction" : [
    {
      "coding" : [
        {
          "system" : "urn:iso:std:iso:3166",
          "code" : "CH"
        }
      ]
    }
  ],
  "copyright" : "CC0-1.0",
  "caseSensitive" : false,
  "content" : "fragment",
  "concept" : [
    {
      "code" : "EP-100700-4",
      "display" : "FOPH emerging pathogen placeholder"
    },
    {
      "code" : "EP-100100-7",
      "display" : "FOPH emerging pathogen placeholder"
    },
    {
      "code" : "EP-101000-8",
      "display" : "FOPH emerging pathogen placeholder"
    },
    {
      "code" : "EP-100500-8",
      "display" : "FOPH emerging pathogen placeholder"
    },
    {
      "code" : "EP-100200-5",
      "display" : "FOPH emerging pathogen placeholder"
    },
    {
      "code" : "EP-100900-0",
      "display" : "FOPH emerging pathogen placeholder"
    },
    {
      "code" : "EP-100300-3",
      "display" : "FOPH emerging pathogen placeholder"
    },
    {
      "code" : "EP-100800-2",
      "display" : "FOPH emerging pathogen placeholder"
    },
    {
      "code" : "EP-100600-6",
      "display" : "FOPH emerging pathogen placeholder"
    },
    {
      "code" : "EP-100400-1",
      "display" : "FOPH emerging pathogen placeholder"
    }
  ]
}

```
